--- a/index.html
+++ b/index.html
@@ -20,7 +20,15 @@
     </ul>
     </nav>
     </header>
-    
+    <main id="content">
+    <article id="primary">
+    <h1>About Me</h1>
+    <p>Hey there! I'm Julie. I'm originally from Philadelphia, but I moved
+    to Chicago to go to IIT and have not looked back. This is my first web development class.
+    I don't know a whole lot about HTML but I think I'm in the right place to start! Anyway,
+    not much to see here, but click around and see where else there's not much to see. </p>
+    </article>
+    </main>
     <footer>
     <p> Julie Gelman 2018</p>
     </footer>
