trying to fix links

--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
     <nav id="navigation">
     <ul>
     <li><a href="/" class="active">Home</a></li>
-    <li><a href="/resume/">Resume</a></li>
-    <li><a href="/aboutme/">Interests</a></li>
+    <li><a href="./resume/">Resume</a></li>
+    <li><a href="./aboutme/">Interests</a></li>
     </ul>
     </nav>
     </header>
