added education in a table

--- a/resume.html
+++ b/resume.html
@@ -15,19 +15,36 @@
     <nav id="navigation">
     <ul>
     <li><a href="/" class="active">Home</a></li>
-    <li><a href="/resume/">Resume</a></li>
-    <li><a href="/aboutme/">Interests</a></li>
+    <li><a href="./resume.html/">Resume</a></li>
+    <li><a href="./aboutme.html/">Interests</a></li>
     </ul>
     </nav>
     </header>
     <main id="content">
     <article id="primary">
     <h1>Resume</h1>
-    <p>Second-year undergraduate student at
-      Illinois Institute of Technology studying Information
-      Technology and Management, looking to specialize in project
-      management. Fast learner with an eye for detail and excellent
-      interpersonal and leadership skills. </p>
+
+    <h4>Education</h4>
+    <table>
+      <tr>
+        <th>Secondary Education</th>
+        <th>Post-Secondary Education</th>
+      </tr>
+      <tr><td>Abington Senior High School</td>
+      <td>Illinois Institute of Technology</td></tr>
+      <tr><td>2013-2016</td>
+      <td>2016-Present</td></tr>
+      <tr><td>GPA: 3.4/4.0</td>
+        <td>GPA: 3.7/4.0</td>
+      </tr>
+    </table>
+    <h4>Skills</h4>
+      <ul>
+        <li>Leadership</li>
+        <li>Public Speaking</li>
+        <li>Organized/Detail-Oriented</li>
+        <li>Analytical/Quantitative Skills</li>
+      </ul>
     </article>
     </main>
     <footer>
