--- a/resume.html
+++ b/resume.html
@@ -24,21 +24,27 @@
     <article id="primary">
     <h1>Resume</h1>
 
-    <h4>Education</h4>
-    <table>
-      <tr>
-        <th>Secondary Education</th>
-        <th>Post-Secondary Education</th>
-      </tr>
-      <tr><td>Abington Senior High School</td>
-      <td>Illinois Institute of Technology</td></tr>
-      <tr><td>2013-2016</td>
-      <td>2016-Present</td></tr>
-      <tr><td>GPA: 3.4/4.0</td>
-        <td>GPA: 3.7/4.0</td>
-      </tr>
-    </table>
-    <h4>Skills</h4>
+    <h3>Education</h3>
+
+
+    <h4>Post-Secondary Education</h4>
+    <ul>
+      <li>Illinois Institute of Technology</li>
+      <li>Chicago, IL</li>
+      <li>2016-Present</li>
+      <li>GPA: 3.7/4.0</li>
+      <li>BS Information Technology and Management</li>
+    </ul>
+
+    <h4>Secondary Education</h4>
+    <ul>
+      <li>Abington Senior High School</li>
+      <li>Abington, PA</li>
+      <li>2013-2016</li>
+      <li>GPA: 3.6/4.0</li>
+    </ul>
+
+    <h3>Skills</h3>
       <ul>
         <li>Leadership</li>
         <li>Public Speaking</li>
