--- a/resume.html
+++ b/resume.html
@@ -14,7 +14,7 @@
 
     <nav id="navigation">
     <ul>
-    <li><a href="/" class="active">Home</a></li>
+    <li><a href="./index.html" class="active">Home</a></li>
     <li><a href="./resume.html">Resume</a></li>
     <li><a href="./aboutme.html">Interests</a></li>
     </ul>
