added work experience

--- a/resume.html
+++ b/resume.html
@@ -24,12 +24,29 @@
     <article id="primary">
     <h1>Resume</h1>
 
+    
+    <h3>Work Experience</h3>
+
+      <h4><strong>Google Cloud Platform Student Innovator</strong><i> (10/2016-Present)</i></h4>
+      <ul>
+      <li><b>Vaco LLC, Chicago IL</b> </li>
+      <li>Organize and host multiple events throughout semester</li>
+      <li>Train students and faculty on Google Cloud Services</li>
+    </ul>
+
+    <h4><strong>Hostess</strong><i> (02/2017-Present)</i></h4>
+    <ul>
+      <li><b>Grand Lux Cafe, Chicago IL</b></li>
+      <li>Greet guests and show them to their table</li>
+      <li>Make sure tables are distributed evenly between servers, keep
+        track of which tables are dirty, set, etc.</li>
+    </ul>
     <h3>Education</h3>
 
 
     <h4>Post-Secondary Education</h4>
     <ul>
-      <li>Illinois Institute of Technology</li>
+      <li><strong>Illinois Institute of Technology</strong></li>
       <li>Chicago, IL</li>
       <li>2016-Present</li>
       <li>GPA: 3.7/4.0</li>
@@ -38,7 +55,7 @@
 
     <h4>Secondary Education</h4>
     <ul>
-      <li>Abington Senior High School</li>
+      <li><strong>Abington Senior High School</strong></li>
       <li>Abington, PA</li>
       <li>2013-2016</li>
       <li>GPA: 3.6/4.0</li>
@@ -51,6 +68,8 @@
         <li>Organized/Detail-Oriented</li>
         <li>Analytical/Quantitative Skills</li>
       </ul>
+
+
     </article>
     </main>
     <footer>
