added contact info

--- a/resume.html
+++ b/resume.html
@@ -24,7 +24,14 @@
     <article id="primary">
     <h1>Resume</h1>
 
-    
+    <table>
+      <tr>
+        <th><i>Contact</i></th>
+        </tr><tr>
+        <td>jgelman@hawk.iit.edu</td></tr>
+        <tr><td>(267) 471-3832</td></tr>
+      </tr>
+    </table>
     <h3>Work Experience</h3>
 
       <h4><strong>Google Cloud Platform Student Innovator</strong><i> (10/2016-Present)</i></h4>
