--- a/resume.html
+++ b/resume.html
@@ -53,18 +53,17 @@
 
     <h4>Post-Secondary Education</h4>
     <ul>
-      <li><strong>Illinois Institute of Technology</strong></li>
+      <li><strong>Illinois Institute of Technology</strong><i> (2016-Present)</i></li>
       <li>Chicago, IL</li>
-      <li>2016-Present</li>
       <li>GPA: 3.7/4.0</li>
       <li>BS Information Technology and Management</li>
     </ul>
 
     <h4>Secondary Education</h4>
     <ul>
-      <li><strong>Abington Senior High School</strong></li>
+      <li><strong>Abington Senior High School</strong><i> (2013-2016)</i></li>
       <li>Abington, PA</li>
-      <li>2013-2016</li>
+
       <li>GPA: 3.6/4.0</li>
     </ul>
 
@@ -76,6 +75,21 @@
         <li>Analytical/Quantitative Skills</li>
       </ul>
 
+      <h3>Volunteer Experience</h3>
+      <h4>Board Member</h4>
+      <ul>
+        <li><strong>Key Club and Circle K</strong><i> (10/2013-Present)</i></li>
+        <li>Organize and execute fundraising events</li>
+      <li>Work with other high schools and universities on large-scale service projects</li>
+      <li>Attend and compete in service and leadership conventions</li>
+    </ul>
+
+    <h4>Teacher's Assistant</h4>
+    <ul>
+      <li><strong>Coding Club</strong><i> (09/2015-05/2016)</i></li>
+      <li>Helped elementary-level students learn basic
+        programming once a week over several months</li>
+    </ul>
 
     </article>
     </main>
