fixed links to about me page

--- a/about.html
+++ b/about.html
@@ -15,7 +15,7 @@
     <ul>
     <li><a href="./index.html" class="active">Home</a></li>
     <li><a href="./resume.html">Resume</a></li>
-    <li><a href="./aboutme.html">Interests</a></li>
+    <li><a href="./about.html">Interests</a></li>
     </ul>
     </nav>
     </header>
