--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
 
     <nav id="navigation">
     <ul>
-    
+
     <li><a href="./resume.html">Resume</a></li>
-    <li><a href="./aboutme.html">Interests</a></li>
+    <li><a href="./about.html">Interests</a></li>
     </ul>
     </nav>
     </header>
