--- a/resume.html
+++ b/resume.html
@@ -16,7 +16,7 @@
     <ul>
     <li><a href="./index.html" class="active">Home</a></li>
     <li><a href="./resume.html">Resume</a></li>
-    <li><a href="./aboutme.html">Interests</a></li>
+    <li><a href="./about.html">Interests</a></li>
     </ul>
     </nav>
     </header>
@@ -30,7 +30,7 @@
         </tr><tr>
         <td>jgelman@hawk.iit.edu</td></tr>
         <tr><td>(267) 471-3832</td></tr>
-      
+
     </table>
     <h3>Work Experience</h3>
 
