--- a/about.html
+++ b/about.html
@@ -22,6 +22,10 @@
     <main id="content">
     <article id="primary">
 
+      <h2>Some Stuff About Me</h2>
+
+      <p>I love to listen to music</p>
+      <img src=lorde.jpg/>
 
 
 
