--- a/about.html
+++ b/about.html
@@ -25,7 +25,7 @@
       <h2>Some Stuff About Me</h2>
 
       <p>I love to listen to music</p>
-      <img src=lorde.jpg/>
+  <img src = "lorde.jpg" alt = "Lorde for Billboard"/>
 
 
 
