--- a/about.html
+++ b/about.html
@@ -23,11 +23,17 @@
     <article id="primary">
 
       <h2>Some Stuff About Me</h2>
+      <h3>My Favorite Musicians</h3>
 
-      <p>I love to listen to music</p>
-  <img src = "lorde.jpg" alt = "Lorde for Billboard"/>
+  <img src = "lorde.jpg" alt = "Lorde for Billboard" style="width: 30%"/>
+    <p><strong>Lorde: </strong> a singer from New Zealand</p>
+  <img src = "kanye.jpg" alt = "Kanye outside his LA recording studio" style="width: 30%"/>
+      <p><strong>Kanye West: </strong> a rapper from Chicago</p>
 
-
-
+      <h3>I Love to Travel</h3>
+    <img src = "paris.jpg" alt = "Me in Paris in high school" style="width: 30%"/>
+    <p>
+    <img src = "greece.jpg" alt = "Me in Greece in high school" style="width: 30%"/>
+    <p>Some embarrassing photos of high school me in <strong>Paris</strong> and in <strong>Greece</strong></p>
   </body>
 </html>
