--- a/about.html
+++ b/about.html
@@ -34,6 +34,6 @@
     <img src = "paris.jpg" alt = "Me in Paris in high school" style="width: 30%"/>
     <p>
     <img src = "greece.jpg" alt = "Me in Greece in high school" style="width: 30%"/>
-    <p>Some embarrassing photos of high school me in <strong>Paris</strong> and in <strong>Greece</strong></p>
+    <p>Some embarrassing photos of high school me in <strong>Paris, France</strong> and in <strong>Athens, Greece</strong></p>
   </body>
 </html>
