added picture to home page

--- a/index.html
+++ b/index.html
@@ -29,6 +29,9 @@
     not much to see here, but click around and see where else there's not much to see. </p>
     </article>
     </main>
+    <img src="philly.jpg"/>
+    <p>My beautiful hometown, <strong>Philadelphia</strong></p>
+
     <footer>
     <p> Julie Gelman 2018</p>
     </footer>
