--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     not much to see here, but click around and see where else there's not much to see. </p>
     </article>
     </main>
-    <img src="philly.jpg"/>
+    <img src="philly.jpg" style="width: 50%"/>
     <p>My beautiful hometown, <strong>Philadelphia</strong></p>
 
     <footer>
