fixed validation errors

--- a/about.html
+++ b/about.html
@@ -32,8 +32,10 @@
 
       <h3>I Love to Travel</h3>
     <img src = "paris.jpg" alt = "Me in Paris in high school" style="width: 30%"/>
-    <p>
+    <p></p>
     <img src = "greece.jpg" alt = "Me in Greece in high school" style="width: 30%"/>
     <p>Some embarrassing photos of high school me in <strong>Paris, France</strong> and in <strong>Athens, Greece</strong></p>
+  </article>
+  </main>
   </body>
 </html>
