--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
     to Chicago to go to IIT and have not looked back. This is my first web development class.
     I don't know a whole lot about HTML but I think I'm in the right place to start! Anyway,
     not much to see here, but click around and see where else there's not much to see. </p>
-    </article>
-    </main>
-    <img src="philly.jpg" style="width: 50%"/>
-    <p>My beautiful hometown, <strong>Philadelphia</strong></p>
 
+    <img src="philly.jpg" alt= "" style="width: 50%"/>
+    <p>My beautiful hometown, <strong>Philadelphia</strong></p>
+  </article>
+  </main>
     <footer>
     <p> Julie Gelman 2018</p>
     </footer>
