added music video

--- a/about.html
+++ b/about.html
@@ -26,6 +26,8 @@
       <h3>My Favorite Musicians</h3>
 
   <img src = "lorde.jpg" alt = "Lorde for Billboard" style="width: 30%"/>
+<p>
+  <iframe width="560" height="315" src="https://www.youtube.com/embed/b_KfnGBtVeA" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe></p>
     <p><strong>Lorde: </strong> a singer from New Zealand</p>
   <img src = "kanye.jpg" alt = "Kanye outside his LA recording studio" style="width: 30%"/>
       <p><strong>Kanye West: </strong> a rapper from Chicago</p>
