added home link on index page

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     <nav id="navigation">
     <ul>
-
+    <li><a href="./index.html" class="active">Home</a></li>
     <li><a href="./resume.html">Resume</a></li>
     <li><a href="./about.html">Interests</a></li>
     </ul>
