--- a/about.html
+++ b/about.html
@@ -25,17 +25,17 @@
       <h2>Some Stuff About Me</h2>
       <h3>My Favorite Musicians</h3>
 
-  <img src = "lorde.jpg" alt = "Lorde for Billboard" style="width: 30%"/>
+  <img src ="img/lordenew.jpg" alt ="Lorde for Billboard"/>
 <div>
   <iframe width="560" height="315" src="https://www.youtube.com/embed/b_KfnGBtVeA" allowfullscreen></iframe>
 </div>  <p><strong>Lorde: </strong> a singer from New Zealand</p>
-  <img src = "kanye.jpg" alt = "Kanye outside his LA recording studio" style="width: 30%"/>
+  <img src="img/kanyenew.jpg" alt="Kanye outside his LA recording studio"/>
       <p><strong>Kanye West: </strong> a rapper from Chicago</p>
 
       <h3>I Love to Travel</h3>
-    <img src = "paris.jpg" alt = "Me in Paris in high school" style="width: 30%"/>
+    <img src="img/parisnew.jpg" alt="Me in Paris in high school"/>
     <p></p>
-    <img src = "greece.jpg" alt = "Me in Greece in high school" style="width: 30%"/>
+    <img src="img/greecenew.jpg" alt="Me in Greece in high school"/>
     <p>Some embarrassing photos of high school me in <strong>Paris, France</strong> and in <strong>Athens, Greece</strong></p>
   </article>
   </main>
