trying to fix philly img

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     I don't know a whole lot about HTML but I think I'm in the right place to start! Anyway,
     not much to see here, but click around and see where else there's not much to see. </p>
 
-    <img src="img/phillynew.jpg"/>
+    <img src="img/phillynew.jpg" alt="Philly Dilly"/>
     <p>My beautiful hometown, <strong>Philadelphia</strong></p>
   </article>
   </main>
