formatted all 3 pages

--- a/index.html
+++ b/index.html
@@ -1,38 +1,36 @@
 <!DOCTYPE html>
 <!--home page, includes basic header and text and links to other pages-->
 <html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <title>Julie Gelman</title>
-
-<meta name="viewport" content="width=device-width,initial-scale=1.0,shrink-to-fit=no"/>
-</head>
-<body>
-  <header id="header">
-  <h2>Julie Gelman</h2>
-
-<nav id="navigation">
-  <ul>
-      <li><a href="./index.html" class="active">Home</a></li>
-      <li><a href="./resume.html">Resume</a></li>
-      <li><a href="./about.html">Interests</a></li>
-  </ul>
-</nav>
-  </header>
-<main id="content">
-<article id="primary">
-      <h1>About Me</h1>
-        <p>Hey there! I'm Julie. I'm originally from Philadelphia, but I moved
-to Chicago to go to IIT and have not looked back. This is my first web development class.
-I don't know a whole lot about HTML but I think I'm in the right place to start! Anyway,
-not much to see here, but click around and see where else there's not much to see. </p>
-
-<img src="img/phillynew.jpg" alt="Philly Dilly"/>
-<p>My beautiful hometown, <strong>Philadelphia</strong></p>
-</article>
-</main>
-<footer>
-<p>Julie Gelman 2018</p>
-</footer>
-</body>
+   <head>
+      <meta charset="UTF-8" />
+      <title>Julie Gelman</title>
+      <meta name="viewport" content="width=device-width,initial-scale=1.0,shrink-to-fit=no"/>
+   </head>
+   <body>
+      <header id="header">
+         <h2>Julie Gelman</h2>
+         <nav id="navigation">
+            <ul>
+               <li><a href="./index.html" class="active">Home</a></li>
+               <li><a href="./resume.html">Resume</a></li>
+               <li><a href="./about.html">Interests</a></li>
+            </ul>
+         </nav>
+      </header>
+      <main id="content">
+         <article id="primary">
+            <h1>About Me</h1>
+            <p>Hey there! I'm Julie. I'm originally from Philadelphia, but I moved
+               to Chicago to go to IIT and have not looked back. This is my first web development class.
+               I don't know a whole lot about HTML but I think I'm in the right place to start! Anyway,
+               not much to see here, but click around and see where else there's not much to see.
+            </p>
+            <img src="img/phillynew.jpg" alt="Philly Dilly"/>
+            <p>My beautiful hometown, <strong>Philadelphia</strong></p>
+         </article>
+      </main>
+      <footer>
+         <p>Julie Gelman 2018</p>
+      </footer>
+   </body>
 </html>
