--- a/resume.html
+++ b/resume.html
@@ -1,100 +1,92 @@
-
 <!DOCTYPE html>
 <!--home page, includes basic header and text and links to other pages-->
 <html lang="en">
-<head>
-    <title>Julie Gelman</title>
-    <meta charset="UTF-8" />
-    <meta name="viewport"
-    content="width=device-width,initial-scale=1.0,shrink-to-fit=no" />
-    </head>
-    <body>
-    <h2>Julie Gelman</h2>
-    <header id="header">
-
-    <nav id="navigation">
-    <ul>
-    <li><a href="./index.html" class="active">Home</a></li>
-    <li><a href="./resume.html">Resume</a></li>
-    <li><a href="./about.html">Interests</a></li>
-    </ul>
-    </nav>
-    </header>
-    <main id="content">
-    <article id="primary">
-    <h1>Resume</h1>
-
-    <table>
-      <tr>
-        <th><i>Contact</i></th>
-        </tr><tr>
-        <td>jgelman@hawk.iit.edu</td></tr>
-        <tr><td>(267) 471-3832</td></tr>
-
-    </table>
-    <h3>Work Experience</h3>
-
-      <h4><strong>Google Cloud Platform Student Innovator</strong><i> (10/2016-Present)</i></h4>
-      <ul>
-      <li><b>Vaco LLC, Chicago IL</b> </li>
-      <li>Organize and host multiple events throughout semester</li>
-      <li>Train students and faculty on Google Cloud Services</li>
-    </ul>
-
-    <h4><strong>Hostess</strong><i> (02/2017-Present)</i></h4>
-    <ul>
-      <li><b>Grand Lux Cafe, Chicago IL</b></li>
-      <li>Greet guests and show them to their table</li>
-      <li>Make sure tables are distributed evenly between servers, keep
-        track of which tables are dirty, set, etc.</li>
-    </ul>
-    <h3>Education</h3>
-
-
-    <h4>Post-Secondary Education</h4>
-    <ul>
-      <li><strong>Illinois Institute of Technology</strong><i> (2016-Present)</i></li>
-      <li>Chicago, IL</li>
-      <li>GPA: 3.7/4.0</li>
-      <li>BS Information Technology and Management</li>
-    </ul>
-
-    <h4>Secondary Education</h4>
-    <ul>
-      <li><strong>Abington Senior High School</strong><i> (2013-2016)</i></li>
-      <li>Abington, PA</li>
-
-      <li>GPA: 3.6/4.0</li>
-    </ul>
-
-    <h3>Skills</h3>
-      <ul>
-        <li>Leadership</li>
-        <li>Public Speaking</li>
-        <li>Organized/Detail-Oriented</li>
-        <li>Analytical/Quantitative Skills</li>
-      </ul>
-
-      <h3>Volunteer Experience</h3>
-      <h4>Board Member</h4>
-      <ul>
-        <li><strong>Key Club and Circle K</strong><i> (10/2013-Present)</i></li>
-        <li>Organize and execute fundraising events</li>
-      <li>Work with other high schools and universities on large-scale service projects</li>
-      <li>Attend and compete in service and leadership conventions</li>
-    </ul>
-
-    <h4>Teacher's Assistant</h4>
-    <ul>
-      <li><strong>Coding Club</strong><i> (09/2015-05/2016)</i></li>
-      <li>Helped elementary-level students learn basic
-        programming once a week over several months</li>
-    </ul>
-
-    </article>
-    </main>
-    <footer>
-    <p> Julie Gelman 2018</p>
-    </footer>
-    </body>
-    </html>
+   <head>
+      <title>Julie Gelman</title>
+      <meta charset="UTF-8" />
+      <meta name="viewport"
+         content="width=device-width,initial-scale=1.0,shrink-to-fit=no" />
+   </head>
+   <body>
+      <h2>Julie Gelman</h2>
+      <header id="header">
+         <nav id="navigation">
+            <ul>
+               <li><a href="./index.html" class="active">Home</a></li>
+               <li><a href="./resume.html">Resume</a></li>
+               <li><a href="./about.html">Interests</a></li>
+            </ul>
+         </nav>
+      </header>
+      <main id="content">
+         <article id="primary">
+            <h1>Resume</h1>
+            <table>
+               <tr>
+                  <th><i>Contact</i></th>
+               </tr>
+               <tr>
+                  <td>jgelman@hawk.iit.edu</td>
+               </tr>
+               <tr>
+                  <td>(267) 471-3832</td>
+               </tr>
+            </table>
+            <h3>Work Experience</h3>
+            <h4><strong>Google Cloud Platform Student Innovator</strong><i> (10/2016-Present)</i></h4>
+            <ul>
+               <li><b>Vaco LLC, Chicago IL</b> </li>
+               <li>Organize and host multiple events throughout semester</li>
+               <li>Train students and faculty on Google Cloud Services</li>
+            </ul>
+            <h4><strong>Hostess</strong><i> (02/2017-Present)</i></h4>
+            <ul>
+               <li><b>Grand Lux Cafe, Chicago IL</b></li>
+               <li>Greet guests and show them to their table</li>
+               <li>Make sure tables are distributed evenly between servers, keep
+                  track of which tables are dirty, set, etc.
+               </li>
+            </ul>
+            <h3>Education</h3>
+            <h4>Post-Secondary Education</h4>
+            <ul>
+               <li><strong>Illinois Institute of Technology</strong><i> (2016-Present)</i></li>
+               <li>Chicago, IL</li>
+               <li>GPA: 3.7/4.0</li>
+               <li>BS Information Technology and Management</li>
+            </ul>
+            <h4>Secondary Education</h4>
+            <ul>
+               <li><strong>Abington Senior High School</strong><i> (2013-2016)</i></li>
+               <li>Abington, PA</li>
+               <li>GPA: 3.6/4.0</li>
+            </ul>
+            <h3>Skills</h3>
+            <ul>
+               <li>Leadership</li>
+               <li>Public Speaking</li>
+               <li>Organized/Detail-Oriented</li>
+               <li>Analytical/Quantitative Skills</li>
+            </ul>
+            <h3>Volunteer Experience</h3>
+            <h4>Board Member</h4>
+            <ul>
+               <li><strong>Key Club and Circle K</strong><i> (10/2013-Present)</i></li>
+               <li>Organize and execute fundraising events</li>
+               <li>Work with other high schools and universities on large-scale service projects</li>
+               <li>Attend and compete in service and leadership conventions</li>
+            </ul>
+            <h4>Teacher's Assistant</h4>
+            <ul>
+               <li><strong>Coding Club</strong><i> (09/2015-05/2016)</i></li>
+               <li>Helped elementary-level students learn basic
+                  programming once a week over several months
+               </li>
+            </ul>
+         </article>
+      </main>
+      <footer>
+         <p> Julie Gelman 2018</p>
+      </footer>
+   </body>
+</html>
