--- a/about.html
+++ b/about.html
@@ -1,43 +1,40 @@
 <!DOCTYPE html>
 <!--home page, includes basic header and text and links to other pages-->
 <html lang="en">
-<head>
-    <title>Julie Gelman</title>
-    <meta charset="UTF-8" />
-    <meta name="viewport"
-    content="width=device-width,initial-scale=1.0,shrink-to-fit=no" />
-    </head>
-    <body>
-    <h2>Julie Gelman</h2>
-    <header id="header">
-
-    <nav id="navigation">
-    <ul>
-    <li><a href="./index.html" class="active">Home</a></li>
-    <li><a href="./resume.html">Resume</a></li>
-    <li><a href="./about.html">Interests</a></li>
-    </ul>
-    </nav>
-    </header>
-    <main id="content">
-    <article id="primary">
-
-      <h2>Some Stuff About Me</h2>
-      <h3>My Favorite Musicians</h3>
-
-  <img src ="img/lordenew.jpg" alt ="Lorde for Billboard"/>
-<div>
-  <iframe width="560" height="315" src="https://www.youtube.com/embed/b_KfnGBtVeA" allowfullscreen></iframe>
-</div>  <p><strong>Lorde: </strong> a singer from New Zealand</p>
-  <img src="img/kanyenew.jpg" alt="Kanye outside his LA recording studio"/>
-      <p><strong>Kanye West: </strong> a rapper from Chicago</p>
-
-      <h3>I Love to Travel</h3>
-    <img src="img/parisnew.jpg" alt="Me in Paris in high school"/>
-    <p></p>
-    <img src="img/greecenew.jpg" alt="Me in Greece in high school"/>
-    <p>Some embarrassing photos of high school me in <strong>Paris, France</strong> and in <strong>Athens, Greece</strong></p>
-  </article>
-  </main>
-  </body>
+   <head>
+      <title>Julie Gelman</title>
+      <meta charset="UTF-8" />
+      <meta name="viewport"
+         content="width=device-width,initial-scale=1.0,shrink-to-fit=no" />
+   </head>
+   <body>
+      <h2>Julie Gelman</h2>
+      <header id="header">
+         <nav id="navigation">
+            <ul>
+               <li><a href="./index.html" class="active">Home</a></li>
+               <li><a href="./resume.html">Resume</a></li>
+               <li><a href="./about.html">Interests</a></li>
+            </ul>
+         </nav>
+      </header>
+      <main id="content">
+         <article id="primary">
+            <h2>Some Stuff About Me</h2>
+            <h3>My Favorite Musicians</h3>
+            <img src ="img/lordenew.jpg" alt ="Lorde for Billboard"/>
+            <div>
+               <iframe width="560" height="315" src="https://www.youtube.com/embed/b_KfnGBtVeA" allowfullscreen></iframe>
+            </div>
+            <p><strong>Lorde: </strong> a singer from New Zealand</p>
+            <img src="img/kanyenew.jpg" alt="Kanye outside his LA recording studio"/>
+            <p><strong>Kanye West: </strong> a rapper from Chicago</p>
+            <h3>I Love to Travel</h3>
+            <img src="img/parisnew.jpg" alt="Me in Paris in high school"/>
+            <p></p>
+            <img src="img/greecenew.jpg" alt="Me in Greece in high school"/>
+            <p>Some embarrassing photos of high school me in <strong>Paris, France</strong> and in <strong>Athens, Greece</strong></p>
+         </article>
+      </main>
+   </body>
 </html>
