fixed validation errors

--- a/resume.html
+++ b/resume.html
@@ -19,6 +19,7 @@
       </header>
       <main id="content">
          <article id="primary">
+
             <h1>Resume</h1>
             <table>
                <tr>
@@ -31,6 +32,8 @@
                   <td>(267) 471-3832</td>
                </tr>
             </table>
+        
+          <section>
             <h3>Work Experience</h3>
             <h4><strong>Google Cloud Platform Student Innovator</strong><i> (10/2016-Present)</i></h4>
             <ul>
@@ -46,6 +49,8 @@
                   track of which tables are dirty, set, etc.
                </li>
             </ul>
+          </section>
+          <section>
             <h3>Education</h3>
             <h4>Post-Secondary Education</h4>
             <ul>
@@ -60,6 +65,8 @@
                <li>Abington, PA</li>
                <li>GPA: 3.6/4.0</li>
             </ul>
+          </section>
+          <section>
             <h3>Skills</h3>
             <ul>
                <li>Leadership</li>
@@ -67,6 +74,8 @@
                <li>Organized/Detail-Oriented</li>
                <li>Analytical/Quantitative Skills</li>
             </ul>
+          </section>
+          <section>
             <h3>Volunteer Experience</h3>
             <h4>Board Member</h4>
             <ul>
@@ -82,6 +91,7 @@
                   programming once a week over several months
                </li>
             </ul>
+          </section>
          </article>
       </main>
       <footer>
