--- a/about.html
+++ b/about.html
@@ -19,8 +19,9 @@
          </nav>
       </header>
       <main id="content">
-         <article id="primary">
+
             <h2>Some Stuff About Me</h2>
+            <section>
             <h3>My Favorite Musicians</h3>
             <img src ="img/lordenew.jpg" alt ="Lorde for Billboard"/>
             <div>
@@ -29,12 +30,15 @@
             <p><strong>Lorde: </strong> a singer from New Zealand</p>
             <img src="img/kanyenew.jpg" alt="Kanye outside his LA recording studio"/>
             <p><strong>Kanye West: </strong> a rapper from Chicago</p>
+          </section>
+          <section>
             <h3>I Love to Travel</h3>
             <img src="img/parisnew.jpg" alt="Me in Paris in high school"/>
             <p></p>
             <img src="img/greecenew.jpg" alt="Me in Greece in high school"/>
             <p>Some embarrassing photos of high school me in <strong>Paris, France</strong> and in <strong>Athens, Greece</strong></p>
-         </article>
+
+       </section>
       </main>
    </body>
 </html>
