--- a/index.html
+++ b/index.html
@@ -18,16 +18,18 @@
          </nav>
       </header>
       <main id="content">
-         <article id="primary">
-            <h1>About Me</h1>
+
+           <section>
+            <h4>About Me</h4>
             <p>Hey there! I'm Julie. I'm originally from Philadelphia, but I moved
                to Chicago to go to IIT and have not looked back. This is my first web development class.
                I don't know a whole lot about HTML but I think I'm in the right place to start! Anyway,
                not much to see here, but click around and see where else there's not much to see.
             </p>
+          </section>
             <img src="img/phillynew.jpg" alt="Philly Dilly"/>
             <p>My beautiful hometown, <strong>Philadelphia</strong></p>
-         </article>
+      
       </main>
       <footer>
          <p>Julie Gelman 2018</p>
