deleted ./ before links

--- a/resume.html
+++ b/resume.html
@@ -11,9 +11,9 @@
       <header id="header">
          <nav id="navigation">
             <ul>
-               <li><a href="./index.html" class="active">Home</a></li>
-               <li><a href="./resume.html">Resume</a></li>
-               <li><a href="./about.html">Interests</a></li>
+               <li><a href="index.html" class="active">Home</a></li>
+               <li><a href="resume.html">Resume</a></li>
+               <li><a href="about.html">Interests</a></li>
             </ul>
          </nav>
       </header>
@@ -32,7 +32,7 @@
                   <td>(267) 471-3832</td>
                </tr>
             </table>
-        
+
           <section>
             <h3>Work Experience</h3>
             <h4><strong>Google Cloud Platform Student Innovator</strong><i> (10/2016-Present)</i></h4>
