--- a/about.html
+++ b/about.html
@@ -12,9 +12,9 @@
       <header id="header">
          <nav id="navigation">
             <ul>
-               <li><a href="./index.html" class="active">Home</a></li>
-               <li><a href="./resume.html">Resume</a></li>
-               <li><a href="./about.html">Interests</a></li>
+               <li><a href="index.html" class="active">Home</a></li>
+               <li><a href="resume.html">Resume</a></li>
+               <li><a href="about.html">Interests</a></li>
             </ul>
          </nav>
       </header>
