--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
          <h2>Julie Gelman</h2>
          <nav id="navigation">
             <ul>
-               <li><a href="./index.html" class="active">Home</a></li>
-               <li><a href="./resume.html">Resume</a></li>
-               <li><a href="./about.html">Interests</a></li>
+               <li><a href="index.html" class="active">Home</a></li>
+               <li><a href="resume.html">Resume</a></li>
+               <li><a href="about.html">Interests</a></li>
             </ul>
          </nav>
       </header>
@@ -29,7 +29,7 @@
           </section>
             <img src="img/phillynew.jpg" alt="Philly Dilly"/>
             <p>My beautiful hometown, <strong>Philadelphia</strong></p>
-      
+
       </main>
       <footer>
          <p>Julie Gelman 2018</p>
